fix(QUploaderAddTrigger): interactive area when wrapped by QBtn with icon-right prop #8061

--- a/ui/src/components/uploader/QUploader.styl
+++ b/ui/src/components/uploader/QUploader.styl
@@ -16,6 +16,7 @@
     width: 100%
     height: 100%
     cursor: pointer !important
+    z-index: 1 /* needed when wrapped by QBtn with icon-right */
 
     // force cursor pointer for native control
     &::-webkit-file-upload-button
